--- a/src/app/(root)/globals.css
+++ b/src/app/(root)/globals.css
@@ -6,6 +6,12 @@
 	--primary-bg: #17171b;
 	--accent-bg: #242427;
 	--soft-bg: #a1a6b2;
+	--primary-gradient: linear-gradient(
+		315deg,
+		rgba(36, 36, 39, 0.15) 0%,
+		rgba(36, 36, 39, 1) 100%
+	);
+	--border-gradient: linear-gradient(135deg, rgba(36, 36, 39, 0.15) 0%, rgba(36, 36, 39, 1) 100%);
 }
 
 * {
