--- a/src/Components/Navigation/Navbar/Navbar.module.css
+++ b/src/Components/Navigation/Navbar/Navbar.module.css
@@ -1,3 +1,8 @@
+.navDummy {
+	width: 100%;
+	height: 67px;
+}
+
 .container {
 	display: flex;
 	align-items: center;
@@ -10,6 +15,9 @@
 	border-image: var(--border-gradient) 1;
 	overflow: hidden;
 	transition: all 0.25s ease-in-out;
+	position: fixed;
+	top: 0;
+	left: 0;
 }
 
 .navToggle {
