--- a/src/Components/Navigation/Navbar/Navbar.module.css
+++ b/src/Components/Navigation/Navbar/Navbar.module.css
@@ -15,6 +15,7 @@
 	border-image: var(--border-gradient) 1;
 	overflow: hidden;
 	transition: all 0.25s ease-in-out;
+	backdrop-filter: blur(2px);
 	position: fixed;
 	top: 0;
 	left: 0;
