--- a/src/Components/Navigation/Sidebar/Sidebar.module.css
+++ b/src/Components/Navigation/Sidebar/Sidebar.module.css
@@ -1,9 +1,3 @@
-.navDummy {
-	display: block;
-	width: 70px;
-	height: 100vh;
-}
-
 .container {
 	display: flex;
 	flex-direction: column;
@@ -17,9 +11,11 @@
 	border-style: solid;
 	border-image: var(--border-gradient);
 	transition: 0.25s ease-in-out;
+	backdrop-filter: blur(2px);
 	position: fixed;
 	top: 0;
 	left: 0;
+	overflow: hidden;
 }
 
 .logo {
@@ -32,11 +28,13 @@
 	display: flex;
 	align-items: center;
 	gap: 0.5rem;
+	cursor: pointer;
 }
 
 .navTitle {
 	font-size: 12px;
 	white-space: nowrap;
+	padding-right: 1rem;
 	transition: 0.25s cubic-bezier(0.95, 0.05, 0.795, 0.035);
 }
 
@@ -66,6 +64,10 @@
 	border-image: var(--border-gradient) 1;
 	overflow: hidden;
 	transition: all 0.25s ease-in-out;
+	backdrop-filter: blur(2px);
+	position: fixed;
+	top: 0;
+	left: 0;
 }
 
 .top {
@@ -84,10 +86,6 @@
 }
 
 @media (max-width: 768px) {
-	.navDummy {
-		display: none;
-	}
-
 	.container {
 		display: none;
 	}
