List my articles page added

--- a/src/app/admin/globals.css
+++ b/src/app/admin/globals.css
@@ -28,6 +28,10 @@ body {
 	background-color: var(--primary-bg);
 }
 
+p {
+	font-size: 16px;
+}
+
 ::placeholder {
 	color: var(--soft-color);
 	opacity: 1; /* Firefox */
