Create article feature added

--- a/src/Components/Posts/MarkdownParser/MarkdownParser.module.css
+++ b/src/Components/Posts/MarkdownParser/MarkdownParser.module.css
@@ -1,3 +1,13 @@
 .title {
 	font-size: 34px;
 }
+
+.cover {
+	width: 100%;
+	height: auto;
+	border-radius: 8px;
+}
+
+.description {
+	margin: 0.5rem 0;
+}
