--- a/src/app/admin/my-articles/edit/[articleId]/EditArticle.module.css
+++ b/src/app/admin/my-articles/edit/[articleId]/EditArticle.module.css
@@ -3,6 +3,35 @@
 	height: calc(100vh - 4rem);
 }
 
+.editorContainer {
+	width: 100%;
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+	gap: 1rem;
+	background: var(--primary-gradient);
+	border-radius: 1rem;
+	padding: 1.25rem;
+	position: relative;
+}
+
+.editorContainer::before {
+	content: "";
+	position: absolute;
+	inset: 0;
+	border-radius: 1rem;
+	padding: 3px;
+	background: var(--border-gradient);
+	-webkit-mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
+	-webkit-mask-composite: xor;
+	mask-composite: exclude;
+	z-index: -1;
+}
+
+.previousPageSection {
+	text-decoration: none;
+}
+
 @media (max-width: 1024px) {
 	.container {
 		height: auto;
