--- a/src/app/admin/my-profile/MyProfile.module.css
+++ b/src/app/admin/my-profile/MyProfile.module.css
@@ -2,6 +2,59 @@
 	margin: 2rem 2rem 2rem calc(2rem + 67px);
 }
 
+.areasContainer {
+	display: flex;
+	justify-content: space-between;
+	margin-top: 1.5rem;
+	gap: 1.5rem;
+}
+
+.sectionContainer {
+	display: flex;
+	flex-direction: column;
+	flex-grow: 1;
+	max-width: 50%;
+	gap: 1rem;
+	background: var(--primary-gradient);
+	border-radius: 1rem;
+	padding: 1.25rem;
+	position: relative;
+}
+
+.sectionContainer::before {
+	content: "";
+	position: absolute;
+	inset: 0;
+	border-radius: 1rem;
+	padding: 3px;
+	background: var(--border-gradient);
+	-webkit-mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
+	-webkit-mask-composite: xor;
+	mask-composite: exclude;
+	z-index: -1;
+}
+
+.seeAllArticles {
+	text-decoration: none;
+}
+
+.underDevelopmentWarnContainer {
+	height: 100%;
+	display: grid;
+	place-items: center;
+}
+
+.underDevelopmentWarnWrapper {
+	display: grid;
+	place-items: center;
+	gap: 1rem;
+}
+
+.underDevelopmentWarn {
+	font-weight: bold;
+	font-size: 20px;
+}
+
 @media (max-width: 768px) {
 	.container {
 		margin: 1rem 1rem 1rem 1rem;
