--- a/src/Components/Posts/PostWidgets/PostWidget.module.css
+++ b/src/Components/Posts/PostWidgets/PostWidget.module.css
@@ -8,7 +8,7 @@
 .container::before {
 	content: "";
 	position: absolute;
-	inset: 0;
+	/* inset: 0; */
 	border-radius: 1rem;
 	padding: 3px;
 	background: var(--border-gradient);
@@ -18,10 +18,15 @@
 	z-index: -1;
 }
 
+.normalWidgetContainer {
+	cursor: pointer;
+}
+
 .postCoverContainer {
 	position: relative;
-	height: auto;
-	width: 50vh;
+	height: calc(25vw * 0.4625);
+	width: 25vw;
+	align-self: center;
 }
 
 .postCover {
@@ -54,9 +59,39 @@
 	width: 100%;
 	height: auto;
 	text-overflow: ellipsis;
+	font-size: 16px;
 }
 
-@media (max-width: 1200px) {
+.authorContainer {
+	display: flex;
+	gap: 0.75rem;
+	align-items: center;
+	margin-top: 6px;
+}
+
+.authorImage {
+	border-radius: 100%;
+}
+
+.authorName {
+	font-size: 16px;
+	font-weight: 500;
+}
+
+.date {
+	font-size: 16px;
+	font-weight: 500;
+}
+
+@media (max-width: 1400px) {
+	.postCoverContainer {
+		position: relative;
+		height: calc(37.5vw * 0.4625);
+		width: 37.5vw;
+	}
+}
+
+@media (max-width: 768px) {
 	.container {
 		flex-direction: column;
 	}
