:sparkles: feat: isPublished option added to edit articles page + simples visual corrections

--- a/src/Components/Posts/EditPostWidget/EditPostWidget.module.css
+++ b/src/Components/Posts/EditPostWidget/EditPostWidget.module.css
@@ -15,7 +15,7 @@
 .editPreviewAreasContainer {
 	display: flex;
 	gap: 1rem;
-	height: calc(100% - 128px);
+	height: 80vh;
 }
 
 .editPreviewArea {
@@ -64,6 +64,38 @@
 
 .form {
 	height: 100%;
+}
+
+.postOptionsContainer {
+	width: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	gap: 1rem;
+	background: var(--primary-gradient);
+	border-radius: 1rem;
+	padding: 12px;
+	margin: 12px 0;
+	position: relative;
+}
+
+.postOptionsContainer::before {
+	content: "";
+	position: absolute;
+	inset: 0;
+	border-radius: 1rem;
+	padding: 3px;
+	background: var(--border-gradient);
+	-webkit-mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
+	-webkit-mask-composite: xor;
+	mask-composite: exclude;
+	z-index: -1;
+}
+
+.postOption {
+	display: flex;
+	gap: 1rem;
+	align-items: center;
 }
 
 @media (max-width: 1024px) {
