--- a/src/app/admin/my-profile/MyProfile.module.css
+++ b/src/app/admin/my-profile/MyProfile.module.css
@@ -12,12 +12,13 @@
 .sectionContainer {
 	display: flex;
 	flex-direction: column;
+	justify-content: space-between;
 	flex-grow: 1;
 	max-width: 50%;
 	gap: 1rem;
 	background: var(--primary-gradient);
 	border-radius: 1rem;
-	padding: 1.25rem;
+	padding: 1.25rem 1.75rem;
 	position: relative;
 }
 
@@ -34,31 +35,46 @@
 	z-index: -1;
 }
 
+.articlesSectionContainer {
+	display: flex;
+	flex-direction: column;
+	gap: 1rem;
+}
+
 .seeAllArticles {
 	text-decoration: none;
 }
 
-.underDevelopmentWarnContainer {
+.centerImageWarnContainer {
 	height: 100%;
 	display: grid;
 	place-items: center;
 	padding: 2rem 0;
 }
 
-.underDevelopmentWarnWrapper {
+.centerImageWarnWrapper {
 	display: grid;
 	place-items: center;
 	gap: 1rem;
 }
 
-.underDevelopmentWarn {
+.centerImageWarn {
 	font-weight: bold;
 	font-size: 20px;
 }
 
-.underDevelopmentImage {
+.centerImage {
 	width: 80%;
 	height: auto;
+}
+
+.centerImageNoArticles {
+	width: 40%;
+	height: auto;
+}
+
+.createPostButton {
+	width: 100%;
 }
 
 @media (max-width: 1200px) {
