--- a/src/Components/Posts/EditPostWidget/EditPostWidget.module.css
+++ b/src/Components/Posts/EditPostWidget/EditPostWidget.module.css
@@ -77,6 +77,7 @@
 	padding: 12px;
 	margin: 12px 0;
 	position: relative;
+	max-width: 256px;
 }
 
 .postOptionsContainer::before {
@@ -94,7 +95,9 @@
 
 .postOption {
 	display: flex;
+	width: 100%;
 	gap: 1rem;
+	justify-content: space-between;
 	align-items: center;
 }
 
