✨ Navbar user button updates
Added dropdown to user button on main navbar and the option to logout

--- a/src/app/(root)/globals.css
+++ b/src/app/(root)/globals.css
@@ -6,12 +6,8 @@
 	--primary-bg: #17171b;
 	--accent-bg: #242427;
 	--soft-bg: #a1a6b2;
-	--primary-gradient: linear-gradient(
-		315deg,
-		rgba(36, 36, 39, 0.15) 0%,
-		rgba(36, 36, 39, 1) 100%
-	);
-	--border-gradient: linear-gradient(135deg, rgba(36, 36, 39, 0.15) 0%, rgba(36, 36, 39, 1) 100%);
+	--primary-gradient: linear-gradient(315deg, rgba(36, 36, 39, 0.5) 0%, rgba(36, 36, 39, 1) 100%);
+	--border-gradient: linear-gradient(135deg, rgba(36, 36, 39, 0.5) 0%, rgba(36, 36, 39, 1) 100%);
 }
 
 * {
