--- a/src/Components/Navigation/Navbar/Navbar.module.css
+++ b/src/Components/Navigation/Navbar/Navbar.module.css
@@ -14,7 +14,6 @@
 	border-style: solid;
 	border-image: var(--border-gradient) 100;
 	border-image-slice: 1;
-	overflow: hidden;
 	transition: all 0.25s ease-in-out;
 	backdrop-filter: blur(3px);
 	position: fixed;
@@ -41,6 +40,7 @@
 	display: flex;
 	gap: 0.5rem;
 	align-items: center;
+	transition: 0.35s ease-in-out;
 }
 
 .signInIcon {
@@ -49,6 +49,77 @@
 
 .userProfileImage {
 	border-radius: 512px;
+	cursor: pointer;
+}
+
+.right {
+	transition: 0.35s ease-in-out;
+}
+
+/* Dropdown */
+
+.dropdownContainer {
+	position: relative;
+	display: inline-block;
+}
+
+.dropdownContent {
+	display: none;
+	position: absolute;
+	background: var(--primary-gradient);
+	backdrop-filter: blur(3px);
+	border-radius: 12px;
+	z-index: 2;
+	width: 156px;
+	right: 0;
+	margin-top: 4px;
+}
+
+.dropdownContent::before {
+	content: "";
+	position: absolute;
+	inset: 0;
+	border-radius: 1rem;
+	padding: 3px;
+	background: var(--border-gradient);
+	-webkit-mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
+	-webkit-mask-composite: xor;
+	mask-composite: exclude;
+	z-index: -1;
+}
+
+.dropdownButton {
+	background-color: transparent;
+	border: none;
+	z-index: 2;
+}
+
+.dropdownItemContainer {
+	display: flex;
+	gap: 6px;
+	align-items: center;
+	color: #fff;
+	padding: 16px 20px;
+	border-radius: 12px;
+	text-decoration: none;
+	text-wrap: nowrap;
+	font-size: 14px;
+	background-color: transparent;
+	width: 100%;
+	border: none;
+}
+
+.dropdownItemContainer:hover {
+	cursor: pointer;
+	text-decoration: underline;
+}
+
+.show {
+	display: block;
+}
+
+.showFlex {
+	display: flex;
 }
 
 @media (max-width: 768px) {
@@ -63,6 +134,8 @@
 
 	.center {
 		flex-direction: column;
+		transform: translateY(-500px);
+		opacity: 0;
 	}
 
 	.left {
@@ -71,5 +144,24 @@
 
 	.right {
 		margin-top: 0.75rem;
+		transform: translateY(-500px);
+		opacity: 0;
+	}
+
+	.show {
+		display: block;
+		transform: translateX(0);
+		opacity: 1;
+	}
+
+	.showFlex {
+		display: flex;
+		transform: translateX(0);
+		opacity: 1;
+	}
+
+	.dropdownContent {
+		left: 50%;
+		margin-left: -78px;
 	}
 }
