--- a/src/app/admin/globals.css
+++ b/src/app/admin/globals.css
@@ -7,12 +7,8 @@
 	--accent-bg: #292329;
 	--soft-bg: #b2a1b2;
 	--error-text: #ff5959;
-	--primary-gradient: linear-gradient(
-		315deg,
-		rgba(41, 35, 41, 0.15) 0%,
-		rgba(41, 35, 41, 1) 100%
-	);
-	--border-gradient: linear-gradient(135deg, rgba(41, 35, 41, 0.15) 0%, rgba(41, 35, 41, 1) 100%);
+	--primary-gradient: linear-gradient(315deg, rgba(41, 35, 41, 0.5) 0%, rgba(41, 35, 41, 1) 100%);
+	--border-gradient: linear-gradient(135deg, rgba(41, 35, 41, 0.5) 0%, rgba(41, 35, 41, 1) 100%);
 }
 
 * {
