--- a/src/Components/Posts/PostWidgets/PostWidget.module.css
+++ b/src/Components/Posts/PostWidgets/PostWidget.module.css
@@ -5,10 +5,11 @@
 	border-radius: 1rem;
 }
 
+/*
 .container::before {
 	content: "";
 	position: absolute;
-	/* inset: 0; */
+	inset: 0;
 	border-radius: 1rem;
 	padding: 3px;
 	background: var(--border-gradient);
@@ -17,6 +18,7 @@
 	mask-composite: exclude;
 	z-index: -1;
 }
+*/
 
 .normalWidgetContainer {
 	cursor: pointer;
