--- a/src/app/(root)/articles/Articles.module.css
+++ b/src/app/(root)/articles/Articles.module.css
@@ -6,13 +6,14 @@
 }
 
 .container {
+	width: 100%;
 	margin: 3rem 2rem 2rem 2rem;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
 	max-width: 1536px;
-	gap: 1.5rem;
+	gap: 16px;
 }
 
 .title {
