--- a/src/app/(root)/(home)/AreasOfExpertise.module.css
+++ b/src/app/(root)/(home)/AreasOfExpertise.module.css
@@ -1,3 +1,9 @@
+.outerContainer {
+  width: 100%;
+  display: grid;
+  place-items: center;
+}
+
 .container {
   max-width: 1280px;
   margin: 3rem 2rem 2rem 2rem;
