--- a/src/app/admin/my-articles/edit/[postId]/EditArticle.module.css
+++ b/src/app/admin/my-articles/edit/[postId]/EditArticle.module.css
@@ -7,12 +7,13 @@
 	display: flex;
 	flex-direction: column;
 	gap: 1rem;
-	background: var(--primary-gradient);
+	/*background: var(--primary-gradient);*/
 	border-radius: 1rem;
 	padding: 1.25rem;
 	position: relative;
 }
 
+/*
 .editorContainer::before {
 	content: "";
 	position: absolute;
@@ -25,6 +26,7 @@
 	mask-composite: exclude;
 	z-index: -1;
 }
+*/
 
 .previousPageSection {
 	text-decoration: none;
