♻️ Removed necessity of password to change own profile

--- a/src/app/admin/management/accounts/create/CreateAccount.module.css
+++ b/src/app/admin/management/accounts/create/CreateAccount.module.css
@@ -5,7 +5,6 @@
 .sectionContainer {
 	display: flex;
 	flex-direction: column;
-	gap: 1rem;
 	border-radius: 1rem;
 	padding: 1.25rem;
 }
@@ -15,7 +14,10 @@
 	justify-content: space-between;
 	align-items: center;
 	gap: 16px;
-	margin-bottom: 8px;
+}
+
+.previousPageSection {
+	margin-bottom: 1rem;
 }
 
 @media (max-width: 768px) {
