--- a/src/app/admin/my-profile/edit/[userId]/EditMyProfile.module.css
+++ b/src/app/admin/my-profile/edit/[userId]/EditMyProfile.module.css
@@ -6,13 +6,13 @@
 	display: flex;
 	flex-direction: column;
 	gap: 1rem;
-	background: var(--primary-gradient);
+	/* background: var(--primary-gradient); */
 	border-radius: 1rem;
 	padding: 1.25rem;
 	position: relative;
 }
 
-.formContainer::before {
+/* .formContainer::before {
 	content: "";
 	position: absolute;
 	inset: 0;
@@ -23,7 +23,7 @@
 	-webkit-mask-composite: xor;
 	mask-composite: exclude;
 	z-index: -1;
-}
+} */
 
 @media (max-width: 768px) {
 	.container {
