--- a/src/app/admin/profile/MyProfileWidget.module.css
+++ b/src/app/admin/profile/MyProfileWidget.module.css
@@ -3,13 +3,13 @@
 	display: flex;
 	flex-direction: column;
 	gap: 1rem;
-	background: var(--primary-gradient);
+	/* background: var(--primary-gradient); */
 	border-radius: 1rem;
 	padding: 1.25rem;
 	position: relative;
 }
 
-.container::before {
+/* .container::before {
 	content: "";
 	position: absolute;
 	inset: 0;
@@ -20,7 +20,7 @@
 	-webkit-mask-composite: xor;
 	mask-composite: exclude;
 	z-index: -1;
-}
+} */
 
 .topContainer {
 	display: flex;
